fixed some bugs in gallery and cleaned up sign up/in

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "devStart": "nodemon index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
